--- a/system/core/templates/core/grade_register.html
+++ b/system/core/templates/core/grade_register.html
@@ -32,7 +32,7 @@
             </select><br>
             <label>成績：</label><br>
             <select name="subject_score" class="form-control" style="width:60%;margin:10px auto;">
-                {% for i in score_range %}
+                {% for i in grade_range %}
                     <option value="{{ i }}">{{ i }}</option>
                 {% endfor %}
             </select><br>
