--- a/system/core/templates/core/grade_view.html
+++ b/system/core/templates/core/grade_view.html
@@ -51,7 +51,7 @@
     <!-- 戻るボタン -->
     <div style="margin-top: 40px; text-align: center;">
         <form method="GET" action="{% url 'core:student_home' %}" style="display: inline-block;">
-            <button type="submit" class="btn btn-secondary" style="padding:10px 30px;">ホームへ戻る
+            <button type="submit" class="btn btn-secondary" style="padding:10px 30px;">←ホームへ戻る
             </button>
         </form>
     </div>
